<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".GameActivity">

    <RelativeLayout
        android:id="@+id/resultLayout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTimer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/result_bg"
        android:visibility="invisible">
        <TextView
            android:id="@+id/labelCorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/amsterdam"
            android:text="@string/label_correct"
            android:textColor="	#09ff00"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtCorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/labelCorrect"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:textColor="	#09ff00"
            android:text="@string/txt_correct"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/labelIncorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtCorrect"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/amsterdam"
            android:text="@string/label_incorrect"
            android:textColor="#ff0000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtIncorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/labelIncorrect"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:textColor="#ff0000"
            android:text="@string/txt_incorrect"
            android:textSize="25sp" />

    </RelativeLayout>


    <TextView
        android:id="@+id/txtTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/txt_timer"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:background="@drawable/timer_bg"
        android:gravity="center"/>

    <TextView
        android:id="@+id/txtExpLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:textColor="@color/accent1"
        android:text="@string/txt_exp1"/>

    <TextView
        android:id="@+id/labelLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtExpLeft"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/royal_gold"
        android:text="@string/left_exp_label"/>


    <TextView
        android:id="@+id/txtExpRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="30dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/accent1"
        android:text="@string/txt_exp2"/>

    <TextView
        android:id="@+id/labelRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/txtExpRight"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/royal_gold"
        android:text="@string/exp_right_label"/>

    <Button
        android:id="@+id/btnGreater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtExpLeft"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/button_bg"
        android:textColor="@color/accent1"
        android:textStyle="bold"
        android:text="@string/greater_btn_txt" />

    <Button
        android:id="@+id/btnLess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtExpRight"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_bg"
        android:textColor="@color/accent1"
        android:textStyle="bold"
        android:text="@string/less_btn_txt"
        />

    <Button
        android:id="@+id/btnEqual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtExpLeft"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/button_bg"
        android:textColor="@color/accent1"
        android:textStyle="bold"
        android:text="@string/equal_btn_txt"/>

    <TextView
        android:id="@+id/txtMsgLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnGreater"
        android:text="@string/msg_label_txt"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:textColor="@color/accent1"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/txtAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic|bold"
        android:layout_centerHorizontal="true"
        android:layout_toEndOf="@+id/txtMsgLabel"
        android:layout_below="@+id/btnGreater"
        android:layout_marginTop="47dp"
        android:textSize="25sp"
        android:layout_marginStart="10dp"/>

</RelativeLayout>
